# AetherDependencies

./: .gitignore  CMakeLists.txt  Version.md
CMake/: VsConfig.cmake
Patches/libpng/: 0001-update-libpng-link-static-zlib.patch
Patchs/efsw/: 0001-always-enable-cmake-install.patch
RectangleBinPack/: CMakeLists.txt
RectangleBinPack/CMake/: RectangleBinPackConfig.cmake.in
RectangleBinPack/Source/RectangleBinPack/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.cpp  Rect.h
SPIRV-Cross/reference/shaders-msl-no-opt/comp/: simple-bindless-ssbo.msl2.argument.argument-tier-1.device-argument-buffer.comp
Scripts/: Build.bat  Clean.bat  CreatePackagesDebug.bat  CreateProjectDebug.bat  build.py  log.py  run_command.py
efsw/: CMakeLists.txt  premake4.lua  premake5.lua
fribidi/: CMakeLists.txt
fribidi/CMake/: fribidiConfig.cmake.in
fribidi/Source/Private/: config.h
glslang/: CMakeLists.txt
glslang/Test/: iomap.crossStage.vk.2.frag  iomap.crossStage.vk.2.geom  iomap.crossStage.vk.2.vert  matrixCompMult.vert  preprocess.inactive_stringify.vert  ps_uint_int.frag  spv.16bitstorage-int.frag  spv.16bitstorage-uint.frag  spv.16bitstorage.frag  spv.8bitstorage-int.frag  spv.8bitstorage-uint.frag  spv.computeShaderDerivativesSpec.comp  spv.computeShaderDerivativesSpec2.comp  spv.nv.hitobject-errors.rgen  spv.replicate.comp  spv.replicatespec.comp  tes_patch.tese
harfbuzz/: CMakeLists.txt
libpng/: CMakeLists.txt
lua-5.4.8/: CMakeLists.txt
lua-5.4.8/CMake/: LuaConfig.cmake.in
miniaudio/: CMakeLists.txt
miniaudio/CMake/: miniaudioConfig.cmake.in
miniaudio/src/miniaudio/: miniaudio.c
msdfgen/: CHANGELOG.md  CMakeLists.txt  README.md
nativefiledialog/: CMakeLists.txt
nativefiledialog/CMake/: nativefiledialogConfig.cmake.in
nlohmann_json/: CMakeLists.txt
nlohmann_json/CMake/: nlohmann_jsonConfig.cmake.in
stb/: CMakelists.txt
stb/CMake/: stb_imageConfig.cmake.in  stb_image_writeConfig.cmake.in  stb_vorbisConfig.cmake.in
stduuid/: CMakeLists.txt
tinygltf/: CMakeLists.txt
tinygltf/CMake/: tinygltfConfig.cmake.in
tinygltf/src/tinygltf/: tiny_gltf.h
tinyxml2/: CMakeLists.txt
tinyxml2/CMake/: tinyxml2Config.cmake.in
